--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../favicon.png" type="image/x-icon">
-    <title>laucherStore</title>
-    {% block head %}  {% endblock head %}
-    <link rel="stylesheet" href="../../style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
-      rel="stylesheet">
-</head>
-<body>
-    {% include "parts/header.njk" %}
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="../../favicon.png" type="image/x-icon">
+        <title>laucherStore</title>
+        {% block head %}{% endblock head %}
+        <link rel="stylesheet" href="../../style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
 
-    {% block content %}
-    {% endblock content %}
+    </head>
+    <body>
+        {% include "parts/header.njk" %}
 
-    {% include "parts/footer.njk" %}
-    
-</body>
+        {% block content %}{% endblock content %}
+
+        {% include "parts/footer.njk" %}
+
+    </body>
 </html>
