--- a/src/app/views/products/create.njk
+++ b/src/app/views/products/create.njk
@@ -1,25 +1,20 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-<link rel="stylesheet" href="../../style.css">
-{% endblock head %} 
+    <link rel="stylesheet" href="../../style.css">
+{% endblock head %}
 
 {% block content %}
 
-<section class="conatiner form">  
-<form  method="POST" action="/products">
-    
-    <div class="header"> 
-    <h3>Cadastrar Poduto</h3> 
-    </div>
-   
+    <section class="conatiner form">
+        <form  method="POST" action="/products" enctype="multipart/form-data">
 
-    <div class="fields">
-    {% include "products/fields.njk" %}
-    </div>
-        <button  class=" button"type="submit">Salvar</button>
+            <div class="fields">
+                {% include 'products/fields.njk' %}
+            </div>
 
-</form>
-</section>
+            <button class="button" type="submit" onclick="Validate.allFields(event)">Salvar</button>
+        </form>
+    </section>
 
 {% endblock content %}
