--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -1,26 +1,28 @@
-{% extends "layout.njk" %} {% block head %}
-<link rel="stylesheet" href="../../style.css" />
-{% endblock head %} {% block content %}
+{% extends "layout.njk" %}
+{% block head %}
+  <link rel="stylesheet" href="../../style.css"/>
+{% endblock head %}
+{% block content %}
 
-<section class="conatiner form">
-  <form method="POST" action="/products?_method=PUT">
-    <div class="header">
-      <h3>Editar Produto {{ product.id }}</h3>
-    </div>
+  <section class="conatiner form">
+    <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
+      <div class="header">
+        <h3>Editar Produto {{ product.name }}</h3>
+      </div>
 
-    <div class="fields">
-      {% include "products/fields.njk" %}
-      <input type="hidden" name="id" value="{{ member.id }}" />
-      <button type="submit">Salvar</button>
-    </div>
+      <div class="fields">
+        {% include "products/fields.njk" %}
+        <input type="hidden" name="id" value="{{ product.id }}"/>
+        <button type="submit">Salvar</button>
+      </div>
 
-    <button class="button" type="submit">Atualizar</button>
-  </form>
+      <button class="button edit" type="submit">Atualizar</button>
+    </form>
 
-  <form id="form-delete" method="POST" action="/members?_method=DELETE">
-    <input type="hidden" name="id" value="{{ member.id }}" />
-    <button class="button" type="submit">Deletar</button>
-  </form>
-</section>
+    <form id="form-delete" method="POST" action="/products?_method=DELETE">
+      <input type="hidden" name="id" value="{{ product.id }}"/>
+      <button class="button delete " type="submit">Deletar</button>
+    </form>
+  </section>
 
 {% endblock content %}
