--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-color: #fd951f;
-  --secondary-color: #b5c6df;
+  --secondary-color: #1069ee;
   --color-background: #f9f9f9;
   --color-MediumSeaGreen: #3cb371;
 }
@@ -55,6 +55,7 @@
 }
 
 /* FIM OOCSS */
+
 html,
 body {
   min-height: 100vh;
@@ -63,6 +64,8 @@ body {
 body {
   background-color: var(--color-background);
   font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -79,7 +82,9 @@ footer {
   padding: 32px;
   text-align: center;
 }
-
+footer {
+  margin-top: auto;
+}
 header div.container {
   display: grid;
   grid-template-columns: 200px auto 280px;
@@ -283,4 +288,72 @@ form .item #photos-preview img {
 
 #photos-preview .photo:hover i {
   opacity: 1;
+}
+
+.product-single {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 24px;
+  padding: 32px 24px;
+  margin: 32px auto;
+  background-color: #fff;
+  box-shadow: 2px 2px 2px -4px rgba(60, 60, 60, 0.8);
+  border: 1px solid #efefef;
+  border-radius: 4px;
+}
+.product-single .gallery {
+  width: 100%;
+}
+.product-single .gallery img {
+  width: 100%;
+}
+
+.product-single .info {
+  display: grid;
+  grid-template-rows: auto 40px 2fr 1fr;
+}
+
+.product-single .info h1 {
+  font-size: 32px;
+  line-height: 1.4;
+  color: #333;
+  text-transform: uppercase;
+}
+
+.product-single .info .published {
+  color: #888;
+  font-size: 12px;
+  line-height: 1.4;
+  letter-spacing: 0.4px;
+}
+
+.product-single .price-buy {
+  display: flex;
+  align-items: center;
+
+  justify-content: space-between;
+  padding-top: 8px;
+  border-top: 1px solid #eee;
+}
+
+.product-single .price-buy .price {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  display: flex;
+  align-items: center;
+}
+
+.product-single .price-buy .price .old {
+  text-decoration: line-through;
+  font-size: 12px;
+  color: #969696;
+  font-weight: normal;
+  margin-left: 8px;
+}
+
+.product-single .price-buy .buy button {
+  background-color: var(--secondary-color);
+  font-size: 14px;
+  letter-spacing: 0.4px;
 }
