--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -23,7 +23,7 @@
 <div class="item">
   <div>Descrição</div>
   <div>
-    <textarea name="description" value="{{ produtc.description }}">{{ product.description }}</textarea>
+    <textarea name="description" value="{{ product.description }}">{{ product.description }}</textarea>
   </div>
 </div>
 <div class="item">
