--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -7,7 +7,7 @@
     <div class="gallery">
       <div class="highlight">
         {% if not files[0] %}
-          <img src="http://www.ccta.ufpb.br/labeet/contents/acervos/categorias/cordofones/udecra/sem-imagem.jpg/@@images/image.jpeg" alt="">
+          <img src="https://place-hold.it/500x300/666/fff/000/?text=Produto%20Sem%20Imagem&fontsize=23" alt="">
         {% else %}
           <img src="{{files[0].src}}" alt="{{files[0].name}}" onclick=(Lightbox.open())>
         {% endif %}
