--- a/public/style.css
+++ b/public/style.css
@@ -336,43 +336,43 @@ form .item #photos-preview img {
 }
 
 .product-single .highlight .lightbox-target {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .7);
-    overflow: hidden;
-    z-index: 100;
-    top: -100%;
-    left: 0;
-    opacity: 0;
-    transition: opacity 400ms;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  z-index: 100;
+  top: -100%;
+  left: 0;
+  opacity: 0;
+  transition: opacity 400ms;
 }
 
 .product-single .highlight .lightbox-target img {
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: white;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, .3);
-    width: 90%;
-    height: 90%;
-    object-fit: contain;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: white;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  width: 90%;
+  height: 90%;
+  object-fit: contain;
 }
 
 .product-single .highlight a.lightbox-close {
-    width: 50px;
-    height: 50px;
-    background: white;
-    position: absolute;
-    top: -80px;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 400ms;
+  width: 50px;
+  height: 50px;
+  background: white;
+  position: absolute;
+  top: -80px;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 400ms;
 }
 
 .product-single .info {
@@ -434,4 +434,51 @@ form .item #photos-preview img {
   font-weight: bold;
   background: #eee;
   padding: 8px 16px;
+}
+
+.shop h2 {
+  margin: 48px;
+}
+
+.shop .items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 32px;
+}
+
+.shop .items p {
+  color: #101010;
+  font-weight: 300;
+  font-size: 24px;
+  margin-top: 4px;
+}
+
+.shop .product {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+.shop .product .image {
+  width: 250px;
+  height: 250px;
+  background-size: cover;
+  object-fit: cover;
+  object-position: center;
+  margin-bottom: 20px;
+}
+
+.shop .product .old-price {
+  padding: 0;
+  margin: 4px 0;
+  color: #999;
+  font-size: 14px;
+  text-decoration: line-through;
+}
+
+.shop .product h4 {
+  margin: 8px 0;
+  font-weight: 300;
+  color: #999;
+  font-size: 18px;
 }
