--- a/src/app/views/search/index.njk
+++ b/src/app/views/search/index.njk
@@ -1,11 +1,26 @@
 {% extends "layout.njk" %}
-{%import  "parts/section-products.njk"as section%}
+{%import  "parts/section-products.njk" as section%}
 {% block content %}
-  <section>
-    <aside>
-    <div class="header">
-    </div>
+  <section class="search-products container">
+    <aside >
+      <div class="header">
+        <h2>{{search.term}}</h2>
+        <p>{{search.total}}</p>
+      </div>
+
+      <nav class="categoris">
+        <h4>Categoria</h4>
+        <ul>
+          {% for category in categories %}
+            <li>
+              <a href="/products/search?filter={{search.term}}&category={{category.id}}">{{category.name}}</a>
+            </li>
+          {% endfor %}
+
+        </ul>
+      </nav>
     </aside>
+
+    {{section.products('', 'searched', products)}}
   </section>
-  {{section.products('', 'searched', products)}}
 {% endblock content %}
