--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -3,6 +3,6 @@
 
 {% block content %}
 
-  {{section.products('Útimos Produtos', 'conatiner', products)}}
+  {{section.products('Útimos Produtos', 'container', products)}}
 
 {% endblock content %}
