--- a/src/app/views/search/index.njk
+++ b/src/app/views/search/index.njk
@@ -4,7 +4,7 @@
   <section class="search-products container">
     <aside >
       <div class="header">
-        <h2>{{search.term}}</h2>
+        <h2>{{search.term}}</h2>\
         <p>{{search.total}}</p>
       </div>
 
