--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -69,7 +69,7 @@
 </div>
 
 <div class="item">
-  <div>Qantidae</div>
+  <div>Quantidade</div>
   <div>
     <input type="number" name="quantity" placeholder="Estoque Disponível" value="{{ product.quantity }}">
   </div>
