--- a/src/app/views/user/fields.njk
+++ b/src/app/views/user/fields.njk
@@ -8,7 +8,7 @@
 <div class="item">
   <div>Email</div>
   <div class="input">
-    <input type="email" name="email" placeholder="Digite o seu email" value="{{ user.email }}">
+    <input type="email" name="email" placeholder="Digite o seu email" value="{{ user.email }} "  onblur="Validate.apply(this, 'isEmail')">
   </div>
 </div>
 
@@ -29,9 +29,17 @@
 {% endif %}
 
 <div class="item">
+  <div class="input">CPF ou CNPJ</div>
+  <div class="input">
+    <input type="text" name="cpf_cnpj" placeholder="Informe o numero do ceu documento" 
+    value="{{ user.cpf_cnpj }}" onkeydown="Mask.apply(this, 'cpfcnpj')" onblur="Validate.apply(this, 'isCpfCnpj')" >
+  </div>
+</div>
+
+<div class="item">
   <div>CEP</div>
   <div class="input">
-    <input type="text" name="cep" placeholder="0000-000" value="{{ user.cep }}" onkeydown="Mask.apply(this, 'cep')">
+    <input type="text" name="cep" placeholder="0000-000" value="{{ user.cep }}" onkeydown="Mask.apply(this, 'cep')" onblur="Validate.apply(this, 'isCep')">
   </div>
 </div>
 
@@ -39,14 +47,6 @@
   <div class="input">Endereço Completo</div>
   <div>
     <input type="text" name="address" placeholder="Digite seu endereço" value="{{ user.address }}">
-  </div>
-</div>
-
-<div class="item">
-  <div class="input">CPF ou CNPJ</div>
-  <div>
-    <input type="text" name="cpf_cnpj" placeholder="Informe o numero do ceu documento" 
-    value="{{ user.cpf_cnpj }}" onkeydown="Mask.apply(this, 'cpfcnpj')" >
   </div>
 </div>
 
