--- a/src/app/views/user/fields.njk
+++ b/src/app/views/user/fields.njk
@@ -15,7 +15,7 @@
 <div class="item">
   <div>Password</div>
   <div class="input">
-    <input type="password" name="password" placeholder="Digite uma senha" value="{{ user.password }}">
+    <input type="password" name="password" placeholder="Digite uma senha">
   </div>
 </div>
 
