--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -6,11 +6,11 @@
         <link rel="shortcut icon" href="../../favicon.png" type="image/x-icon">
         <title>laucherStore</title>
         {% block head %}{% endblock head %}
-        <link rel="stylesheet" href="../../style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
+        {% include "parts/styles.njk" %}
 
     </head>
     <body>
+        {% include "parts/messages.njk" %}
         {% include "parts/header.njk" %}
 
         {% block content %}{% endblock content %}
