--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -21,18 +21,39 @@
         {%
         endif
         %}
-      />
+/>
     </form>
 
     <nav class="primary">
       <ul>
         <li>
-          <a href="/ads/create"><i class="material-icons">add</i>Novo Anúcio</a>
+          <a href="/ads/create">
+            <i class="material-icons">add</i>Novo Anúcio</a>
         </li>
-        <li>
-          <a href="/accounts"
-            ><i class="material-icons">account_circle</i>Minha Conta</a
-          >
+
+        <li class="accounts">
+          <a href="/accounts" >
+            <i class="material-icons">account_circle</i>
+          Minha Conta</a>
+          {% if session.userId %}
+            <ul class="submenu">
+              <li>
+                <a href="/usrs">Minha Conta</a>
+              </li>
+              <li>
+                <a href="/buying">Meus pedidos</a>
+              </li>
+              <li>
+                <a href="/selling">Minhas vendas</a>
+              </li>
+              <li>
+                <form action="/users/logout" method="POST">
+                  <button>Sair</button>
+                </form>
+              </li>
+            </ul>
+          {% endif %}
+
         </li>
       </ul>
     </nav>
