--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -38,7 +38,7 @@
           {% if session.userId %}
             <ul class="submenu">
               <li>
-                <a href="/usrs">Minha Conta</a>
+                <a href="/users">Minha Conta</a>
               </li>
               <li>
                 <a href="/buying">Meus pedidos</a>
