--- a/src/app/views/user/index.njk
+++ b/src/app/views/user/index.njk
@@ -1,6 +1,5 @@
 {% extends "layout.njk" %}
-{% block head %}
-{% endblock head %}
+{% block head %}{% endblock head %}
 {% block content %}
 
   <section class="user-dashboard container form">
@@ -18,10 +17,11 @@
       <button class="button edit" type="submit">Atualizar</button>
     </form>
 
-    <form id="form-delete" method="POST" action="/users?_method=DELETE">
-      <input type="hidden" name="id" value="{{ user.id }}"/>
-      <button class="button delete " type="submit">Deletar</button>
+    <form id="form-delete" action="/users?_method=DELETE" method="POST">
+      <input type="hidden" name="id" value={{user.id}}>
+      <button class="button delete" type="submit">Deletar</button>
     </form>
+    
   </section>
 
 {% endblock content %}
