add user session

--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../../favicon.png" type="image/x-icon">
-        <title>laucherStore</title>
-        {% block head %}{% endblock head %}
-        {% include "parts/styles.njk" %}
 
+        {% block head %}
+            <title>Launchstore</title>
+        {% endblock %}
+
+        {%include "parts/styles.njk" %}
     </head>
     <body>
-        {% include "parts/messages.njk" %}
-        {% include "parts/header.njk" %}
+        {%include "parts/messages.njk"%}
 
-        {% block content %}{% endblock content %}
+        {%include "parts/header.njk" %}
 
-        {% include "parts/footer.njk" %}
+        {% block content %}{% endblock %}
 
+        {%include "parts/footer.njk" %}
+        
     </body>
 </html>
