--- a/src/app/views/parts/footer.njk
+++ b/src/app/views/parts/footer.njk
@@ -1,3 +1,2 @@
-<footer>Copwrite LauncheStore</footer>
-
-<script src="../../script.js"></script>
+<footer>© Copyright Launchstore</footer>
+<script src="/scripts.js"></script>
