--- a/src/app/views/user/fields.njk
+++ b/src/app/views/user/fields.njk
@@ -1,59 +1,96 @@
 <div class="item">
-  <div>Nome Completo</div>
-  <div class="input">
-    <input type="text" name="name" placeholder="Digite o seu nome" value="{{ user.name }}">
-  </div>
-</div>
-
-<div class="item">
-  <div>Email</div>
-  <div class="input">
-    <input type="email" name="email" placeholder="Digite o seu email" value="{{ user.email }} "  onblur="Validate.apply(this, 'isEmail')">
-  </div>
-</div>
-
-<div class="item">
-  <div>Password</div>
-  <div class="input">
-    <input type="password" name="password" 
-    {% if not user.id %}
-      placeholder="Digite uma senha"
-    {%else%}copr
-      placeholder="Digite sua senha para atualiza o cadastro"
-    {% endif %}>
-
-  </div>
-</div>
-
-{% if not user.id %}
-  <div class="item">
-    <div>Repita a senha</div>
+    <div>Nome Completo</div>
     <div class="input">
-      <input type="password" name="passwordRepeat" placeholder="Confirme a senha">
+        <input 
+            type="text" 
+            name="name"
+            placeholder="Digite seu nome completo"
+            value="{{ user.name }}"
+            required
+        >
     </div>
-  </div>
-{% endif %}
-
-<div class="item">
-  <div class="input">CPF ou CNPJ</div>
-  <div class="input">
-    <input type="text" name="cpf_cnpj" placeholder="Informe o numero do ceu documento" 
-    value="{{ user.cpf_cnpj }}" onkeydown="Mask.apply(this, 'cpfcnpj')" onblur="Validate.apply(this, 'isCpfCnpj')" >
-  </div>
 </div>
 
 <div class="item">
-  <div>CEP</div>
-  <div class="input">
-    <input type="text" name="cep" placeholder="0000-000" value="{{ user.cep }}" onkeydown="Mask.apply(this, 'cep')" onblur="Validate.apply(this, 'isCep')">
-  </div>
+    <div>Email</div>
+    <div class="input">
+        <input 
+            type="email" 
+            name="email"
+            placeholder="Digite seu email"
+            value="{{ user.email }}"
+            onblur="Validate.apply(this, 'isEmail')"
+        >
+    </div>
 </div>
 
 <div class="item">
-  <div class="input">Endereço Completo</div>
-  <div>
-    <input type="text" name="address" placeholder="Digite seu endereço" value="{{ user.address }}">
-  </div>
+    <div>Senha</div>
+    <div class="input">
+        <input 
+            type="password"
+            name="password"
+            {%if not user.id%}
+            placeholder="Escolha uma senha segura"
+            {%else%}
+            placeholder="Digite sua senha para atualizar seu cadastro"
+            {%endif%}
+        >
+    </div>
 </div>
 
+{%if not user.id%}
+<div class="item">
+    <div>Repetir Senha</div>
+    <div class="input">
+        <input 
+            type="password"
+            name="passwordRepeat"
+            placeholder="Repita a senha escolhida"
+        >
+    </div>
+</div>
+{%endif%}
+
+<div class="item">
+    <div>CPF ou CNPJ</div>
+    <div class="input">
+        <input 
+            type="text"
+            name="cpf_cnpj"
+            placeholder="Digite seu documento"
+            value="{{ user.cpf_cnpj }}"
+            onkeydown="Mask.apply(this, 'cpfCnpj')"
+            onblur="Validate.apply(this, 'isCpfCnpj')"
+
+        >
+    </div>
+</div>
+
+
+<div class="item">
+    <div>CEP</div>
+    <div class="input">
+        <input 
+            type="text"
+            name="cep"
+            placeholder="99999-999"
+            value="{{ user.cep }}"
+            onkeydown="Mask.apply(this, 'cep')"
+            onblur="Validate.apply(this, 'isCep')"
+
+        >
+    </div>
+</div>
+
+<div class="item">
+    <div>Endereço Completo</div>
+    <div class="input">
+        <input 
+            type="text"
+            name="address"
+            placeholder="Digite seu endereço completo"
+            value="{{ user.address }}"
+        >
+    </div>
 </div>
