--- a/public/styles/menu-accounts.css
+++ b/public/styles/menu-accounts.css
@@ -1,47 +1,55 @@
 .accounts {
-  position: relative;
+    position: relative;
 }
 
 .accounts .submenu {
-  position: absolute;
-  left: 0;
-  top: 32px;
-  margin-left: 32px;
-  width: 150px;
-  display: block;
-  background-color: #fff;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.4);
-  transition: all 200ms;
-  opacity: 0;
-  visibility: hidden;
+    position:absolute;
+    top: 32px;
+    left: 0;
+
+    margin-top: 8px;
+
+    width: 150px;
+
+    display: block;
+    background: white;
+
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px -2px rgba(0,0,0,.3);
+
+    transition: all 200ms;
+    opacity: 0;
+
+    visibility: hidden;
+}
+
+.accounts .submenu li a,
+.accounts .submenu li button {
+    color: #777;
+    padding: 8px 16px;
+    cursor: pointer;
+
+    font-size: 14px;
+
+    border-radius: 4px;
+    border-top: 1px solid #eee;
+
+    display:inline-block;
+    width: 100%;
 }
 
 .accounts .submenu li:first-child a {
-  border: none;
+    border: none;
 }
-.accounts .submenu li a,
-.accounts .submenu li button {
-  color: #777;
-  padding: 8px 16px;
-  font-size: 14px;
-  border-radius: 4px;
-  border-top: 1px solid #eee;
-background-color: #fff;
-  display: inline-block;
-  width: 100%;
-  cursor: pointer;
-}
-
 
 .accounts .submenu li a:hover,
 .accounts .submenu li button:hover {
-  color: #111;
-  font-weight: bold;
+    color: #111;
+    font-weight: bold;
 }
 
 .accounts:hover .submenu {
-  visibility: initial;
-  opacity: 1;
-  top: 0;
+    top: 0;
+    opacity: 1;
+    visibility: initial;
 }
