--- a/public/styles/messages.css
+++ b/public/styles/messages.css
@@ -1,27 +1,27 @@
-
 @keyframes hidemessage {
-  to {
-    top: -50px;
-    opacity: 0;
-  }
+    to {
+        top: -50px;
+        opacity: 0;
+    }
 }
-.messages {
-  display: flex;
-  justify-content: center;
-  padding: 16px;
-  position: absolute;
-  width: 100%;color: white;
-  top: 0;
-  opacity: 1;
 
-  animation: hidemessage 400ms 5s ease-in-out forwards;
+.messages {
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+    position: absolute;
+    width: 100%;
+    color: white;
+    top: 0;
+    opacity: 1;
+
+    animation: hidemessage 400ms 5s ease-out forwards;
 }
 
 .messages.error {
-  background-color: #e74c3c;
+    background: #e74c3c;
 }
 
 .messages.success {
-  background-color: #3ce783;
+    background: rgb(122, 182, 30);
 }
-
