--- a/public/styles/session.css
+++ b/public/styles/session.css
@@ -1,23 +1,23 @@
 section.login.container,
 section.password.container {
-  max-width: 500px;
+    max-width: 500px;
 }
 
-section.login.container .fields ,
-section.password.container .fields {
-  margin-bottom: 32px;
+section.login.container .fields,
+section.password.container .fields{
+    margin-bottom: 32px;
 }
- 
+
 section.login.container .footer ul {
-  display: flex;
-  justify-content: space-evenly;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-section.login.container .footer li a {
-  color: #777;
+section.login.container .footer ul li a {
+    color: #777;
 }
 
-section.login.container .footer li a:hover {
-  color: #000;
-  font-weight: bold;
+section.login.container .footer ul li a:hover {
+    color: black;
+    font-weight: bold;
 }
