--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -1,8 +1,7 @@
 {% extends "layout.njk" %}
-{%import  "parts/section-products.njk"as section%}
+{% import "parts/section-products.njk" as section %}
 
 {% block content %}
 
-  {{section.products('Útimos Produtos', 'container', products)}}
-
+    {{section.products('Últimos Produtos', 'container', products)}}
 {% endblock content %}
