--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -1,28 +1,39 @@
 {% extends "layout.njk" %}
-{% block head %}
-  <link rel="stylesheet" href="../../style.css"/>
-{% endblock head %}
+
 {% block content %}
 
-  <section class="conatiner form">
+<section class="container form">
     <form method="POST" action="/products?_method=PUT" enctype="multipart/form-data">
-      <div class="header">
-        <h3>Editar Produto {{ product.name }}</h3>
-      </div>
 
-      <div class="fields">
-        {% include "products/fields.njk" %}
-        <input type="hidden" name="id" value="{{ product.id }}"/>
-        <button type="submit">Salvar</button>
-      </div>
+        <div class="header">
+            <h3>Editar Produto {{productId}}</h3>
+        </div>
 
-      <button class="button edit" type="submit">Atualizar</button>
+        
+        <div class="fields">
+            {% include 'products/fields.njk' %}
+            <input 
+                type="hidden" 
+                name="id"
+                value={{product.id}}>
+        </div>
+
+        <button class="button edit" type="submit">Atualizar</button>
     </form>
 
-    <form id="form-delete" method="POST" action="/products?_method=DELETE">
-      <input type="hidden" name="id" value="{{ product.id }}"/>
-      <button class="button delete " type="submit">Deletar</button>
+     <form id="form-delete" action="/products?_method=DELETE" method="post">
+        <input type="hidden" name="id" value={{product.id}}>
+        <button class="button delete" type="submit">Deletar</button>
     </form>
-  </section>
+</section>
 
+<script> 
+    const formDelete = document.querySelector("#form-delete")
+    formDelete.addEventListener("submit", function(event) {
+        const confirmation = confirm("Deseja Deletar?")
+        if(!confirmation) {
+            event.preventDefault()
+        }
+    })
+</script>
 {% endblock content %}
