--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -1,62 +1,77 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-
-  <section class="product-single container">
+<section class="product-single container">
 
     <div class="gallery">
-      <div class="highlight">
-        {% if not files[0] %}
-          <img src="https://place-hold.it/500x300/666/fff/000/?text=Produto%20Sem%20Imagem&fontsize=23" alt="">
-        {% else %}
-          <img src="{{files[0].src}}" alt="{{files[0].name}}" onclick=(Lightbox.open())>
-        {% endif %}
+        <div class="highlight">
+            {% if not files[0] %}
+            <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" />
+            {% else %}
+            <img 
+                src="{{files[0].src}}" 
+                alt="{{files[0].name}}" 
+                onclick="Lightbox.open()"
+                >
+            {%endif%}
 
-        <div class="lightbox-target"><img src="{{files[0].src}}" alt="{{files[0].name}}">
-          <a href="#" class="lightbox-close" onclick=(Lightbox.close())>
-            <i class="material-icons">close</i>
-          </a>
+            <div class="lightbox-target">
+                <img src="{{files[0].src}}" alt="{{files[0].name}}">
+                <a 
+                    href="#" 
+                    class="lightbox-close"
+                    onclick="Lightbox.close()"
+                    >
+                    <i class="material-icons">close</i>
+                </a>
+            </div>
         </div>
-      </div>
-
-      <div class="gallery-preview">
-        {% for image in files %}
-          <img src="{{image.src}}" 
-          alt="{{image.name}}" 
-          {% if loop.index0 == 0 %}
-            class="active"
-          {% endif %}
-
-          onclick="ImageGallery.setImage(event)">
-        {% endfor %}
-      </div>
+        <div class="gallery-preview">
+            {%for image in files %}
+                <img 
+                    src="{{image.src}}" 
+                    alt="{{image.name}}"
+                    {% if loop.index0 == 0 %}
+                    class="active"
+                    {%endif%}
+                    onclick="ImageGallery.setImage(event)"
+                >
+            {% endfor %}
+        </div>
     </div>
 
     <div class="info">
-      <h1>{{product.name}}</h1>
-      <div class="published">Publicado em {{product.published.day}} às {{product.published.hour}}</div>
-      <div class="description">{{product.description}}</div>
-      <div class="price-buy">
-        <div class="price">
-          {{product.price}}
+        <h1>{{product.name}} </h1>
 
-          {% if product.price !== product.old_price %}
-            <span class="old">{{product.old_price}}</span>
-
-          {% endif %}
+        <div class="published">
+            Publicado em {{product.published.day}} às {{product.published.hour}} 
         </div>
-        <div class="buy">
-          {% if product.status == 0 %}
-            <p class="unavailable">Indisponível</p>
-          {% elseif product.quantity == 0  %}
-            <p class="unavailable">Fora de estoque</p>
-          {% else %}
 
-            <button class="button" type="submit">Comprar</button>
-          {% endif %}
+        <div class="description">
+                {{product.description}} 
         </div>
-      </div>
+
+        <div class="price-buy">
+            <div class="price">
+                {{product.price}} 
+
+                {% if product.price !== product.oldPrice %}
+                    <span class="old">{{product.oldPrice}} </span>
+                {%endif%}
+            </div>
+            
+            <div class="buy">
+                {% if product.status == 0 %}
+                    <p class="unavailable">Indisponível</p>
+                {% elseif product.quantity == 0 %}
+                    <p class="unavailable">Fora de Estoque</p>
+                {% else %}
+                    <button class="button">Comprar</button>
+                {%endif%}
+            </div>
+        </div>
+    
     </div>
 
-  </section>
+</section>
 {% endblock content %}
