--- a/src/app/views/session/forgot-password.njk
+++ b/src/app/views/session/forgot-password.njk
@@ -1,28 +1,33 @@
 {% extends "layout.njk" %}
 
-{% block head %}
-  <link rel="stylesheet" href="../../style.css">
-{% endblock head %}
-
 {% block content %}
+<section class="password container form">
+    <form method="POST" action="/users/forgot-password">
 
-  <section class="password container form">
-    <form  method="POST" action="/users/forgot-password">
-      <div class="header">
-        <h3>Esqueceu a senha?</h3>
-      </div>
-      <div class="fields">
-        <div class="item">
-          <div>Email</div>
-          <div class="input">
-            <input type="email" name="email" placeholder="Digite o email caadastrado"  value="{{user.email}}" onblur="Validate.apply(this, 'isEmail')">
-          </div>
+        <div class="header">
+            <h3>Esqueceu a senha?</h3>
         </div>
-      </div>
 
-      <button class="button" type="submit"> Entrar</button>
+        
+        <div class="fields">
+            <div class="item">
+                <div>Email</div>
+                <div class="input">
+                    <input 
+                        type="email" 
+                        name="email"
+                        placeholder="Digite o email cadastrado"
+                        value="{{user.email}}"
+                        onblur="Validate.apply(this, 'isEmail')"
+                    >
+                </div>
+            </div>
+        </div>
+
+        <button class="button" type="submit">Recuperar senha</button>
 
     </form>
-  </section>
+</section>
+
 
 {% endblock content %}
