--- a/src/app/views/session/login.njk
+++ b/src/app/views/session/login.njk
@@ -1,33 +1,32 @@
 {% extends "layout.njk" %}
 
-{% block head %}
-    <link rel="stylesheet" href="../../style.css">
-{% endblock head %}
-
 {% block content %}
+<section class="login container form">
+    <form method="POST" action="/users/login">
 
-    <section class="login container form">
-        <form  method="POST" action="/users/login">
-            <div class="header">
-                <h3>Entrar</h3>
-            </div>
-            <div class="fields">
-                {% include 'session/fields.njk' %}
-            </div>
+        <div class="header">
+            <h3>Entrar</h3>
+        </div>
 
-            <button class="button" type="submit"> Entrar</button>
+        
+        <div class="fields">
+            {% include 'session/fields.njk' %}
+        </div>
 
-            <div class="footer">
-                <ul>
-                    <li>
-                        <a href="/users/register">Registre-se</a>
-                    </li>
-                    <li>
-                        <a href="/users/forgot-password">Esqueceu a senha?</a>
-                    </li>
-                </ul>
-            </div>
-        </form>
-    </section>
+        <button class="button" type="submit">Entrar</button>
+
+        <div class="footer">
+            <ul>
+                <li>
+                    <a href="/users/register">Registre-se</a>
+                </li>
+                <li>
+                    <a href="/users/forgot-password">Esqueci a senha</a>
+                </li>
+            </ul>
+        </div>
+    </form>
+</section>
+
 
 {% endblock content %}
