--- a/src/app/views/session/password-reset.njk
+++ b/src/app/views/session/password-reset.njk
@@ -1,24 +1,22 @@
 {% extends "layout.njk" %}
 
-{% block head %}
-    <link rel="stylesheet" href="../../style.css">
-{% endblock head %}
-
 {% block content %}
+<section class="password container form">
+    <form method="POST" action="/users/password-reset">
 
-    <section class="login container form">
-        <form  method="POST" action="/users/password-reset"
-            <div class="header">
-                <h3>Nova senha</h3>
-            </div>
-            <div class="fields">
-                {% include 'session/reset-fields.njk' %}
-            </div>
+        <div class="header">
+            <h3>Nova senha</h3>
+        </div>
 
-            <button class="button" type="submit"> Nova senha</button>
+        
+        <div class="fields">
+            {% include 'session/reset-fields.njk' %}
+        </div>
 
-            
-        </form>
-    </section>
+        <button class="button" type="submit">Nova senha</button>
+
+    </form>
+</section>
+
 
 {% endblock content %}
