--- a/src/app/views/session/reset-fields.njk
+++ b/src/app/views/session/reset-fields.njk
@@ -1,27 +1,36 @@
 <div class="item">
-  <div>Email</div>
-  <div class="input">
-    <input type="email" name="email" placeholder="Digite o seu email"  
-    value="{{user.email}}" onblur="Validate.apply(this, 'isEmail')">
-  </div>
+    <div>Email</div>
+    <div class="input">
+        <input 
+            type="email" 
+            name="email"
+            placeholder="Digite seu email"
+            value="{{user.email}}"
+            onblur="Validate.apply(this, 'isEmail')"
+        >
+    </div>
 </div>
 
 <div class="item">
-  <div>Nova Senha</div>
-  <div class="input">
-    <input type="password" name="password" placeholder="Digite sua senha">
-  </div>
+    <div>Senha</div>
+    <div class="input">
+        <input 
+            type="password"
+            name="password"
+            placeholder="Digite uma nova senha"
+        >
+    </div>
 </div>
 
 <div class="item">
-  <div>Repetição da Senha</div>
-  <div class="input">
-    <input type="password" name="passwordRepeat" placeholder="Repita a senha">
-  </div>
+    <div>Repetição da Senha</div>
+    <div class="input">
+        <input 
+            type="password"
+            name="passwordRepeat"
+            placeholder="Repita a nova senha"
+        >
+    </div>
 </div>
 
 <input type="hidden" name="token" value="{{token}}">
-
-
-
-</div>
