--- a/src/app/views/user/index.njk
+++ b/src/app/views/user/index.njk
@@ -1,27 +1,39 @@
 {% extends "layout.njk" %}
-{% block head %}{% endblock head %}
+
 {% block content %}
 
-  <section class="user-dashboard container form">
+<section class="user-dashboard container form">
     <form method="POST" action="/users?_method=PUT">
-      <div class="header">
-        <h3>Detalhes {{ user.name }}</h3>
-      </div>
 
-      <div class="fields">
-        {% include "user/fields.njk" %}
-        <input type="hidden" name="id" value="{{ user.id }}"/>
-        <button type="submit">Salvar</button>
-      </div>
+        <div class="header">
+            <h3>Detalhes</h3>
+        </div>
 
-      <button class="button edit" type="submit">Atualizar</button>
+        
+        <div class="fields">
+            {% include 'user/fields.njk' %}
+            <input 
+                type="hidden" 
+                name="id"
+                value={{user.id}}>
+        </div>
+
+        <button class="button edit" type="submit">Atualizar</button>
     </form>
 
-    <form id="form-delete" action="/users?_method=DELETE" method="POST">
-      <input type="hidden" name="id" value={{user.id}}>
-      <button class="button delete" type="submit">Deletar</button>
+     <form id="form-delete" action="/users?_method=DELETE" method="post">
+        <input type="hidden" name="id" value={{user.id}}>
+        <button class="button delete" type="submit">Deletar</button>
     </form>
-    
-  </section>
+</section>
 
+<script> 
+    const formDelete = document.querySelector("#form-delete")
+    formDelete.addEventListener("submit", function(event) {
+        const confirmation = confirm("Tem certeza que deseja excluir sua conta? Essa operação não poderá ser desfeita")
+        if(!confirmation) {
+            event.preventDefault()
+        }
+    })
+</script>
 {% endblock content %}
